# Django-Verify-Email

./: CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/scripts/: bump_version.py
.github/workflows/: python-publish.yml  release.yml  tests.yml
src/verify_email/locale/de/LC_MESSAGES/: django.mo
src/verify_email/locale/es/LC_MESSAGES/: django.mo
src/verify_email/locale/fr/LC_MESSAGES/: django.mo
src/verify_email/locale/it/LC_MESSAGES/: django.mo
src/verify_email/locale/pt/LC_MESSAGES/: django.mo
tests/: settings.py  urls.py
verify_email/: __init__.py  admin.py  app_configurations.py  apps.py  confirm.py  custom_types.py  email_handler.py  errors.py  interface.py  models.py  tests.py  token_manager.py  urls.py  views.py
verify_email/migrations/: 0001_initial.py
verify_email/templates/: email_index.html
verify_email/templates/verify_email/: email_verification_failed.html  email_verification_successful.html  link_expired.html  new_email_sent.html  request_new_email.html
