[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Django-Verify-Email"
version = "3.1.0"
description = "A Django app for two-step email verification of new sign-ups."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Nitin Sharma", email = "ns290670@gmail.com" }]
keywords = ["django", "email", "verification", "signup", "authentication"]
dependencies = ["Django>=4.2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/foo290/Django-Verify-Email/"
Source = "https://github.com/foo290/Django-Verify-Email/"
Issues = "https://github.com/foo290/Django-Verify-Email/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-django", "tox", "build", "twine"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["verify_email*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Line length is handled by the formatter (black); long string literals and
# docstrings are allowed to exceed it.
ignore = ["E501"]
